--- a/_layouts/single.css
+++ b/_layouts/single.css
@@ -1,4 +1,4 @@
-
+<style>
 header {
     background-color:black;
     color:white;
@@ -25,3 +25,4 @@ footer {
     text-align:center;
     padding:5px;
 } 
+</style>
