--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="single.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="{{ page.title }}">
+<meta name="author" content="{{ page.authors | array_to_sentence_string }}">
+
+<title>{{ page.title}}</title>
+<!-- CSS -->
+<link href="css/example.css" rel="stylesheet">
+<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]>
+<script src="js/html5shiv.js"></script>
+<script src="js/respond.min.js"></script>
+<![endif]-->
 </head>
 <body>
-<header>
-<h1>Header 1!</h1>
-</header>
-<nav>
-adam<br>
-jesse<br>
-Ashlee<br>
-</nav>
-<section>
-<h1>section header </h1>
-<p>
-stuff about adam.
-</p>
-<p>
-More Stuff!
-</p>
-</section>
-<footer>
-ThunderBird
-</footer>
-</body> 
+{% include menu.html %}
+{{ content }}
+{% include footer.html %}
+
+</body>
+</html>
