--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,24 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="{{ page.title }}">
-<meta name="author" content="{{ page.authors | array_to_sentence_string }}">
 
-<title>{{ page.title}}</title>
-<!-- CSS -->
-<link href="css/example.css" rel="stylesheet">
-<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-<script src="js/html5shiv.js"></script>
-<script src="js/respond.min.js"></script>
-<![endif]-->
-</head>
-<body>
-{% include menu.html %}
-{{ content }}
-<!--{% include footer.html %}-->
-
-</body>
-</html>
+{% include header.html %}
+<div class="row-fluid">
+    <div class="span8">
+        {{ content }}
+    </div>
+    <div class="span4">
+        {% include sidebar.html %}
+    </div>
+</div>
+{% include footer.html %}
