--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
           <a class="brand" href="#">{{ site.name }}</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="/">Home</a></li>
+              <li class="active"><a href="http://kre.github.io/devtools/#">Home</a></li>
             </ul>
           </div>
         </div>
