--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -1,74 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="{{ page.title }}">
-    <meta name="author" content="{{ page.authors | array_to_sentence_string }}">
-    <link rel="shortcut icon" href="img/favicon.png">
+<!DOCTYPE html> 
+<html> 
+  <head> 
+  <title>My Page</title> 
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+  <script src="js/app.js"></script>
+</head> 
+<body> 
 
-    <title>{{ page.title}}</title>
+<div data-role="page">
 
-    <!-- Css -->
-    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
+  <div data-role="header">
+    <h1>KRL DevTools</h1>
+  </div><!-- /header -->
 
-    <style>
-      .header-image {
-        margin-top: 4px;
-        text-align: center;
-      }
+  <div data-role="content"> 
+    
+    <ul data-role="listview" data-inset="true" data-filter="false">
+  <li><a href="#login">Login</a></li>
 
-      .rightMenu {
-         position: absolute;
-         top:-5%;   
-         right:2%;
-         width: 100px !important;
-         z-index: 1;
-      }
+  <li><a href="#Create-Account">Create Account</a></li>
 
-      .rightMenu .ui-collapsible-content .ui-listview {
-          margin: -11px -22px -12px -16px !important
-      }
+</ul> </div><!-- /content -->
 
-      .alert {
-        color: red
-      }
-      @media (min-width:800px) {
-        .ui-content {
-          width: 800px;
-          margin-left: auto;
-          margin-right: auto;
-        }
-      }
-      .center-wrapper{
-        text-align: center;
-      }			  
-      .center-wrapper * {
-        margin: 0 auto;
-      }
+</div><!-- /page -->
 
-      .wrap {
-         white-space: normal !important;
-      }
-
-
-ui-listview .ui-li-icon {
-    max-height: 35px;
-    max-width: 35px;
-    top: 50%;
-    margin-top: -15px;
-}
-
-   </style>
-    <!-- Themes -->
-   
-  </head>
-  <body>
-
-    {{ content }}
-
-    <!-- Javascript -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/app.js"></script>
-  </body>
+</body>
 </html>
+
+    
