--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
   <head> 
-  <title>My Page</title> 
+  <title>{{ page.title}}</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
@@ -10,22 +10,9 @@
 </head> 
 <body> 
 
-<div data-role="page">
+{{ content }}
 
-  <div data-role="header">
-    <h1>KRL DevTools</h1>
-  </div><!-- /header -->
 
-  <div data-role="content"> 
-    
-    <ul data-role="listview" data-inset="true" data-filter="false">
-  <li><a href="#login">Login</a></li>
-
-  <li><a href="#Create-Account">Create Account</a></li>
-
-</ul> </div><!-- /content -->
-
-</div><!-- /page -->
 
 </body>
 </html>
