--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -4,9 +4,11 @@
     <title>{{ page.title}}</title> 
       <meta name="viewport" content="width=device-width, initial-scale=1"> 
       <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
-      <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+      <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
+      <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
       <script src="/devtools/js/jquery.mobile.router.js"></script>
-      <script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+      <script src="https://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+    
       <script src="/devtools/js/app.js"></script>
   </head> 
 <body> 
