--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -11,6 +11,8 @@
       <script src="https://s3.amazonaws.com/CloudOS_assets/js/CloudOS-1.0.0.js"></script>
       <script src="js/CloudOS-config.js"></script>
       <script src="/devtools/js/app.js"></script>
+      <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+      <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
   </head> 
 <body> 
 
