console not consol

--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -78,7 +78,7 @@
          alert("Authentication failed. We apologize for this inconvenience. Please try again.");
        } else {
       // display authorization 
-              consol.log("display Authorization")
+              console.log("display Authorization")
           }
 },
 function(json){
