--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -79,6 +79,7 @@
        } else {
       // display authorization 
               console.log("display Authorization")
+              window.location = "app.html";
           }
 },
 function(json){
