ruleset needs CloudOS

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,7 @@
 <div data-role="panel" id="mypanel">
         <!-- panel content goes here -->
         <ul id="menu">
-  <li>Item 1</li>
+  <!--<li>Item 1</li>
   <li>Item 2</li>
   <li>Item 3
     <ul>
@@ -15,7 +15,7 @@
   </li>
   <li>Item 4</li>
   <li>Item 5</li>
-</ul>
+</ul>-->
  
 <script>
 $( "#menu" ).menu();
