accessing devtools-api

--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -61,6 +61,7 @@
 
   <!--getting access for devtools-api-->
   <script src="js/devtools-api.js"></script>
+  <script src="js/devtools-api-config.js"></script>
 
 
 
