--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -56,12 +56,12 @@
   <script src="https://s3.amazonaws.com/CloudOS_assets/js/CloudOS-1.0.0.js"></script>
   <script src="js/CloudOS-config.js"></script>
   <!--  <script src="https://rawgit.com/kynetx/Fuse-API/master/js/fuse-api.js"></script> -->
-  <script src="https://s3.amazonaws.com/Fuse_assets/js/fuse-api-1.0.0.js"></script>
-  <script src="js/fuse-api-config.js"></script>
+  <!-- <script src="https://s3.amazonaws.com/Fuse_assets/js/fuse-api-1.0.0.js"></script>
+  <script src="js/fuse-api-config.js"></script> -->
 
   <!--getting access for devtools-api-->
   <script src="https://raw.githubusercontent.com/kre/devtools/gh-pages/js/devtools-api.js"></script>
-  <script src="js/devtools-api-config.js"></script>
+  <!-- <script src="js/devtools-api-config.js"></script> -->
 
 
 
