move code to body just as in joinnfuse.

--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -3,25 +3,29 @@
   <head> 
     <title>{{ page.title}}</title> 
       <meta name="viewport" content="width=device-width, initial-scale=1"> 
-      <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
-      <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
-      <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-      <script src="/devtools/js/jquery.mobile.router.js"></script>
-      <script src="https://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
-      <script src="https://s3.amazonaws.com/CloudOS_assets/js/CloudOS-1.0.0.js"></script>
-      <script src="js/CloudOS-config.js"></script>
-      <script src="/devtools/js/app.js"></script>
-
-      <script src="https://raw.githubusercontent.com/kre/devtools/gh-pages/js/devtools-api.js"></script>
-      <script src="js/devtools-api-config.js"></script>
 
 
-    <!--  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-      <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-  --></head> 
+</head> 
 <body> 
 
-{{ content }}
+
+  {{ content }}
+
+
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
+    <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <script src="/devtools/js/jquery.mobile.router.js"></script>
+    <script src="https://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+    <script src="https://s3.amazonaws.com/CloudOS_assets/js/CloudOS-1.0.0.js"></script>
+    <script src="js/CloudOS-config.js"></script>
+    <script src="/devtools/js/app.js"></script>
+
+    <script src="https://raw.githubusercontent.com/kre/devtools/gh-pages/js/devtools-api.js"></script>
+    <script src="js/devtools-api-config.js"></script>
+
+    <!--  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>-->
 
 
 </body>
