--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -15,9 +15,9 @@
     <script src="https://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
     <script src="https://s3.amazonaws.com/CloudOS_assets/js/CloudOS-1.0.0.js"></script>
     <script src="js/CloudOS-config.js"></script>
-    <script src="/devtools/js/app.js"></script>
+    <script src="js/app.js"></script>
 
-    <script src="https://raw.githubusercontent.com/kre/devtools/gh-pages/js/devtools-api.js"></script>
+    <script src="js/devtools-api.js"></script>
     <script src="js/devtools-api-config.js"></script>
 
     <!--  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
