--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -11,7 +11,7 @@
 
     <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-    <script src="/devtools/js/jquery.mobile.router.js"></script>
+    <script src="js/jquery.mobile.router.js"></script>
     <script src="https://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
     <script src="https://s3.amazonaws.com/CloudOS_assets/js/CloudOS-1.0.0.js"></script>
     <script src="js/CloudOS-config.js"></script>
