corrected logic, quick fix

--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -82,7 +82,7 @@
         if (!oauth_payload.OAUTH_ECI) {
          alert("Authentication failed. We apologize for this inconvenience. Please try again.");
        } else {
-        if ( ) {//if not bootstraped 
+        if (false ) {//if not bootstraped ----------------------- need to finish
           $.mobile.loading("show", {
                text: "Please wait while we create your account...",
                textVisible: true
