redirect to the correct address

--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -97,7 +97,7 @@
             console.log("No need to bootstrap");
             // display authorization 
             console.log("Authorized")
-            window.location = "index.html";
+            window.location = "app.html";
           }
 },
 function(json){
