--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -91,13 +91,13 @@
           {
             console.log("Received directives from bootstrap.execute: ", kns_directives);
             $.mobile.loading("hide");
-            window.location = "app.html";
+            window.location = "index.html";
           });
         } else {
             console.log("No need to bootstrap");
             // display authorization 
             console.log("Authorized")
-            window.location = "app.html";
+            window.location = "index.html";
           }
 },
 function(json){
