--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -82,23 +82,23 @@
         if (!oauth_payload.OAUTH_ECI) {
          alert("Authentication failed. We apologize for this inconvenience. Please try again.");
        } else {
-        if (false ) {//if not bootstraped ----------------------- need to finish
-          $.mobile.loading("show", {
-               text: "Please wait while we create your account...",
-               textVisible: true
-          });         
+ //       if (false ) {//if not bootstraped ----------------------- need to finish
+  //        $.mobile.loading("show", {
+ //              text: "Please wait while we create your account...",
+  //             textVisible: true
+   //       });         
        //   devtools.initAccount({ state: state }, function(kns_directives) // Devtools object?? vs devtools
-          {
-            console.log("Received directives from bootstrap.execute: ", kns_directives);
-            $.mobile.loading("hide");
-            window.location = "index.html";
-          });
-        } else {
+  //        {
+  //          console.log("Received directives from bootstrap.execute: ", kns_directives);
+   //         $.mobile.loading("hide");
+   //         window.location = "index.html";
+   //       });
+   //     } else {
             console.log("No need to bootstrap");
             // display authorization 
             console.log("Authorized")
             window.location = "index.html";
-          }}
+          }
 },
 function(json){
  console.log("something went wrong with the OAuth authorization " + json);
