--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -82,7 +82,7 @@
         if (!oauth_payload.OAUTH_ECI) {
          alert("Authentication failed. We apologize for this inconvenience. Please try again.");
        } else {
-        if (false ) {//if not bootstraped ----------------------- need to finish
+        if (false ) {//if not bootstraped --------------------------------------------------- need to be finish
           $.mobile.loading("show", {
            text: "Please wait while we create your account...",
            textVisible: true
