--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -6,7 +6,7 @@
        <!--<p class="ui-li-aside"><img style="vertical-align: middle" class="ui-li-icon" src="{{status_icon}}">  {{last_running}}</p>-->
        <h3><b>{{rid}}</b></h3> <!--pulls these {{}} values from paint_item in app.js-->
        <p>{{uri}}<br/>
-          <!--{{description}}-->
+          {{description}}
        </p>
       </a>
   </li>
