--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -2,11 +2,11 @@
 
 <div id="list-rulesets-template" style="display:none;">
   <li class="ui-field-contain">
-      <a data-transition="slide" href="#listing?id={{id}}"> <!--listing was page-update-vehicle-->
-       <p class="ui-li-aside"><img style="vertical-align: middle" class="ui-li-icon" src="{{status_icon}}">  <!--{{last_running}}</p>-->
+      <a data-transition="slide" href="#page-update-vehicle?id={{id}}"> <!--change page-update-vehicle-->
+       <p class="ui-li-aside"><img style="vertical-align: middle" class="ui-li-icon" src="{{status_icon}}">  {{last_running}}</p>
        <h3><b>{{rid}}</b></h3> <!--pulls these {{}} values from paint_item in app.js-->
        <p>{{uri}}<br/>
-          <!--{{description}}-->
+          {{description}}
        </p>
       </a>
   </li>
