--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -2,20 +2,20 @@
 
 <div id="list-rulesets-template" style="display:none;">
   <li class="ui-field-contain">
-      <a data-transition="slide" href="#listing?id={{id}}"> <!--was priorly #page-update-vehicle-->
+      <a data-transition="slide" href="#"> <!--was priorly #page-update-vehicle-->
        <h3><b>{{rid}}</b></h3> <!--pulls these {{}} values from paint_item in app.js-->
        <p>{{uri}}</p>
       </a>
   </li>
 </div>
 
-<div id="logitem-template" style="display:none;">
+<!--<div id="logitem-template" style="display:none;">
    <div id="{{id}}" data-role="collapsible" data-theme="a" data-content-theme="b">
    <h2>{{timestamp}} ({{eid}})</h2>
         {{#each log_items}}
 	 {{this}}<br/>
         {{/each}}
-   </div>
+   </div> -->
 </div>
 
 
