--- a/Templates/List-Rulesets-template.html
+++ b/Templates/List-Rulesets-template.html
@@ -4,7 +4,7 @@
   <li class="ui-field-contain">
       <a data-transition="slide" href="#updating-url?id={{id}}"> <!--change page-update-vehicle-->
        <p class="ui-li-aside">{{last_running}}</p>
-       <h3><b>{{rid}}</b></h3> <!--pulls these {{}} values from paint_item in app.js-->
+       <h3><b>{{rid}}</b></h3> <!--pulls these values from paint_item in app.js-->
        <p>{{uri}}<br/>
           {{description}}
        </p>
