--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -9,13 +9,13 @@
   </li>
 </div>
 
-<!--<div id="logitem-template" style="display:none;">
+<div id="logitem-template" style="display:none;">
    <div id="{{id}}" data-role="collapsible" data-theme="a" data-content-theme="b">
    <h2>{{timestamp}} ({{eid}})</h2>
         {{#each log_items}}
 	 {{this}}<br/>
         {{/each}}
-   </div> -->
+   </div>
 </div>
 
 
