--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -16,7 +16,12 @@
    <div id="{{id}}" data-role="collapsible" data-theme="a" data-content-theme="b">
    <h2>{{timestamp}} ({{eid}})</h2>
         {{#each log_items}}
-	 {{this}}<br/>
+	 {{#ifHeader this }}
+	   <b>{{this}}</b>
+         {{else}}
+	   {{this}}
+         {{/ifHeader}}
+         <br/>
         {{/each}}
    </div>
 </div>
