--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -2,7 +2,7 @@
 
 <div id="list-rulesets-template" style="display:none;">
   <li class="ui-field-contain">
-      <a data-transition="slide" href="#updating-url">
+      <a data-transition="slide" href="#updating-url?{{rid}}">
        <h3><b>{{rid}}</b></h3> <!--pulls these values from paint_item in app.js-->
        <p>{{uri}}</p>
       </a>
