--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -23,5 +23,11 @@
    </div>
 </div>
 
+<div id="installed-ruleset-template" style="display:none;">
+   <div id="{{id}}" data-role="collapsible" data-theme="a" data-content-theme="b">
+   <h2>{{name}}</h2>
+   </div>
+</div>
+
 
 {% endraw %}
