--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -25,7 +25,10 @@
 
 <div id="installed-ruleset-template" style="display:none;">
    <div id="{{id}}" data-role="collapsible" data-theme="a" data-content-theme="b">
-   <h2>{{name}}</h2>
+     <h2>{{name}} ({{rid}})</h2>
+     <p>Author: {{author}}
+     <p>{{description}}</p>
+     <p>Last cached: {{ruleset_cached}}</p>
    </div>
 </div>
 
