--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -27,7 +27,7 @@
    <div id="{{id}}" data-role="collapsible" data-theme="a" data-content-theme="a">
      <h2>{{name}} ({{rid}})</h2>
      <div>
-       <p style="position:relative; top:-20px"><a style="float:right" href="#confirm-uninstall-ruleset?rid={{rid}}" class="ui-btn ui-icon-delete ui-btn-icon-notext"></a></p>
+       <p style="position:relative; top:-20px"><a style="float:right" href="#confirm-uninstall-ruleset?rid={{rid}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Uninstall</a></p>
        <p>Author: {{author}}
        <p>{{description}}</p>
        <p>Last cached: {{ruleset_cached}}</p>
