--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
-    </div>
+<div data-role="footer" data-theme="b"  data-position="fixed">
+    <h2>KRE Devtools</h2>
+</div><!-- /footer -->
+<!--     </div> -->
 
-  </body>
-</html>
+<!--   </body> -->
+<!-- </html> -->
