--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -61,7 +61,7 @@
 
   <!--getting access for devtools-api-->
   <script src="https://raw.githubusercontent.com/kre/devtools/gh-pages/js/devtools-api.js"></script>
-  <!-- <script src="js/devtools-api-config.js"></script> -->
+ <!-- <script src="js/devtools-api-config.js"></script> -->
 
 
 
@@ -79,31 +79,27 @@
 
       CloudOS.getOAuthAccessToken(CloudOS.retrieveOAuthCode(), function(oauth_payload)
       {
-        if (!oauth_payload.OAUTH_ECI) {
-         alert("Authentication failed. We apologize for this inconvenience. Please try again.");
-       } else {
-
-        $.mobile.loading("show", {
-         text: "Please wait while we create your account...",
-         textVisible: true
-       });         
-         Devtools.initAccount({ state: state }, function(kns_directives) // Devtools object?? vs devtools
-         {
-          console.log("Received directives from bootstrap.execute: ", kns_directives);
-          $.mobile.loading("hide");
+        if (oauth_payload.OAUTH_ECI) {
+          console.log("No need to bootstrap");
+          console.log("Authorized")            // display authorization 
           window.location = "index.html";
-        });
-
-       }
-     },
-     function(json){
-       console.log("something went wrong with the OAuth authorization " + json);
-       alert("Something went wrong with your authorization. Please try again. ");
-   // not ideal, but...
-   window.location = "https://" + CloudOS.login_server + "/login";
- }
- );
-    })
+       } else {
+            //alert("Authentication failed. We apologize for this inconvenience. Please try again.");
+            Devtools.initAccount({}, function(kns_directives){
+            console.log("Received directives from bootstrap.execute: ", kns_directives);
+            $.mobile.loading("hide");
+            window.location = "index.html";
+            });
+        }
+      },
+      function(json){
+        console.log("something went wrong with the OAuth authorization " + json);
+        alert("Something went wrong with your authorization. Please try again. ");
+        // not ideal, but...
+        window.location = "https://" + CloudOS.login_server + "/login";
+      }
+      );
+    });
 </script>
 
 </body>
