--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,5 +2,5 @@
  {{#unless include.no_home}}
    <a href="#home" data-icon="home" data-theme="b" class="ui-link ui-btn-left ui-btn ui-btn-b ui-icon-home ui-btn-icon-left ui-shadow ui-corner-all" data-role="button" role="button">Home</a>
  {{/unless}}
-   <h2 class="ui-title">{{include.title}}</h2>  include.no_home
+   <h2 class="ui-title">{{include.title}}</h2>  {{include.no_home}}
    </div><!-- /header -->
