--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -59,6 +59,9 @@
   <!-- <script src="https://s3.amazonaws.com/Fuse_assets/js/fuse-api-1.0.0.js"></script>
   <script src="js/fuse-api-config.js"></script> -->
 
+  <script src="js/devtools-api.js"></script>
+  <script src="js/devtools-api-config.js"></script>
+
   <!--getting access for devtools-api-->
   <script src="https://raw.githubusercontent.com/kre/devtools/gh-pages/js/devtools-api.js"></script>
  <!-- <script src="js/devtools-api-config.js"></script> -->
