Fix template language; check ruleset validity

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -42,7 +42,7 @@
   <li>
   <p>Uninstall ruleset {{rid}}?</p>
   <p>
-    <a id="remove-ruleset-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Delete</a>
+    <a id="remove-ruleset-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Uninstall</a>
     <a href="#page-installed-rulesets" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
   </p>
   </li>
