add filter to installed rulesets

--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -24,7 +24,7 @@
 </div>
 
 <div id="installed-ruleset-template" style="display:none;">
-   <div id="{{id}}" data-role="collapsible" data-theme="a" data-content-theme="a">
+   <div id="{{id}}" data-role="collapsible" data-filtertext="{{name}} ({{rid}})" data-theme="a" data-content-theme="a">
      <h2>{{name}} ({{rid}})</h2>
      <div>
        {{#if OK }}
