--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -44,6 +44,7 @@
        {{#if OK }}
          <p style="position:relative; top:-20px"><a style="float:right" href="#confirm-uninstall-ruleset?rid={{rid}}" data-role="button" data-icon="delete" class="ui-btn ui-icon-delete ">Uninstall</a></p>
        {{/if}}
+       <p><b>Ruleset ID:</b> {{rid}}
        <p><b>Author:</b> {{author}}
        <p>{{description}}</p>
        <p><b>Last cached:</b> {{ruleset_cached}}</p>
